<resources>
    <string name="app_name">CorpoApp</string>
    <string name="titulo_correcto">CORRECTO</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="titulo_aviso">AVISO</string>
    <string name="cancelar">CANCELAR</string>
    <string name="titulo_error">ERROR</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="ok">OK</string>
    <string name="descargando">Descargando...</string>
    <string name="titulo_de_la_descarga">APK se está descargando</string>
    <string name="menu_about">Version</string>

    <string name="tst_info_paper">Out of Paper!!!</string>
    <string name="tst_info_temperature">Thermal Protection!!!</string>
    <string name="tst_info_voltage">Low Power!!!</string>
    <string name="tst_info_busy">Printer Busy!!!</string>
    <string name="tst_info_error">Printer Error!!!</string>
    <string name="tst_info_driver_error">Printer Driver Error!!!</string>
    <string name="tst_info_select_picture">Print default picture?</string>
    <string name="tst_info_select_picture_msg">Press OK to print default picture, otherwise print a picture from Gallery!!!</string>

    <string-array name="font_size">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>16</item>
        <item>24</item>
        <item>36</item>
        <item>48</item>
        <item>50</item>
    </string-array>

    <string-array name="font_name">
        <item>simsun</item>
        <item>arial</item>
    </string-array>
    <string name="title_activity_tanque_lleno">TanqueLlenoActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escanear_proucto">Escanear Proucto</string>
    <string name="combustibles">COMBUSTIBLES</string>
    <string name="_1">1</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="aceites">ACEITES</string>
    <string name="perifericos">Perifericos</string>
    <string name="combustible">Combustible</string>
    <string name="selecciona_una_opcion">SELECCIONA UNA OPCION</string>
    <string name="_0_00">0.00</string>
    <string name="litros">Litros:</string>
    <string name="cobrar">Cobrar</string>
    <string name="libre">Libre</string>
    <string name="predeterminar">Predeterminar</string>
    <string name="_perifericos">Perifericos</string>
    <string name="_combustibles">Combustibles</string>
    <string name="tipos_de_vale">Tipos de Vale</string>
    <string name="monto">Monto</string>
    <string name="label">RFC</string>
    <string name="leer_tarjeta_nfc">Leer Tarjeta NFC</string>


    <string name="scan_title">Scan</string>
    <string name="scan_result">Scan result</string>
    <string name="scan_on">ON</string>
    <string name="scan_off">OFF</string>
    <string name="scan_settings">Settings</string>
    <string name="scan_service">ScanService</string>
    <string name="scan_trigger_start">Scan</string>
    <string name="scan_trigger_end">Stop</string>
    <string name="scan_lock_trigger">Lock Trigger</string>
    <string name="scan_lock_trigger_summary">Set the scan trigger inactive</string>
    <string name="scan_trigger_mode">Scan Trigger Mode</string>
    <string name="scan_output_mode">Scan Output Mode</string>
    <string name="scan_sound_mode">Scan Beep</string>
    <string name="scan_cupture_image">Cupture Image</string>
    <string name="scan_cupture_title">Cupture Image</string>
    <string name="scan_cupture_summary">Intent Output Mode Cupture Image</string>
    <string name="scan_reset_def_summary">Reset the decoding subsystem configuration </string>
    <string name="scan_reset_def">Reset Configuration</string>
    <string name="scan_reset_def_alert">Reset the decoding subsystem configuration?</string>
    <string name="scan_reset_title">Reset</string>
    <string name="scan_reset_progress">Reset ......</string>
    <string name="scanner_toast">Scanner reset finished!</string>
    <string name="scanner_intent_action">Intent action</string>
    <string name="scanner_wedge_intent_title">Intent Output</string>
    <string name="scanner_intent_stringlabel">Intent string extra</string>
    <string name="scan_keyboard_output_type">Keyboard Output Type</string>
    <string name="scan_intent_barcode_type">Intent Barcode Tag</string>
    <string name="scan_barcode_symbology">Barcode Symbology</string>
    <string name="scan_cupture_image_prompt">Please select the broadcast output.</string>
</resources>