<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="374dp"
        android:layout_height="263dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/dialog_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textMontoVales"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:gravity="end"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/textMontoDescripcion"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textMontoDescripcion"
            android:layout_width="71dp"
            android:layout_height="42dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="36dp"
            android:text="@string/monto"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textTitleEfectivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/title_warning_background"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/textTitleEfectivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textTitleEfectivo"
            app:layout_constraintVertical_bias="0.592"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvMonto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tipos_de_vale"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleEfectivo" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="338dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMonto" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelarVales"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_error_background"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/layoutDialog"
        app:layout_constraintTop_toBottomOf="@+id/layoutDialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAceptarVales"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_warning_background"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/layoutDialog"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/btnCancelarVales"
        app:layout_constraintTop_toBottomOf="@+id/layoutDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>